--- a/store/fragment/index.html
+++ b/store/fragment/index.html
@@ -309,7 +309,7 @@
 
             function opens(amount) {
                 const am = amount / 10;
-                document.getElementById("fs").src = 'https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity={am}&amp;payment_method=qris&amp&amp;';
+                document.getElementById("fs").src = 'https://trakteer.id/antopHD/tip/embed/modal?step=2&amp;supporter_message=Hai, jangan pencet send as anonymouse ya biar w ga bingnung -_-&amp;quantity=${am}&amp;payment_method=qris&amp&amp;';
 
                 document.getElementById("fs").style.display = "block";
                 document.getElementById("blank").style.display = "block";
