--- a/test/login/index.html
+++ b/test/login/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login Example</title>
-    <script src="login.js"></script>
+    <script src="https://four.my.id/container/login.js"></script>
 </head>
 <body>
     <input type="text" id="username" placeholder="Enter username">
