--- a/test/login/index.html
+++ b/test/login/index.html
@@ -14,7 +14,7 @@
         // Example: access currentUser from another script
         if (currentUser) {
             document.getElementById("test").style.color = "green";
-            document.getElementById("user").style.content = currentUser;
+            document.getElementById("user").style.content(currentUser);
         } else {
             document.getElementById("test").style.color = "red";
         }
