--- a/test/login/index.html
+++ b/test/login/index.html
@@ -17,6 +17,7 @@
             document.getElementById("test").style.content = currentUser;
         } else {
             document.getElementById("test").style.color = "red";
+            document.getElementById("test").style.content = "guest";
         }
     </script>
 </body>
