--- a/test/login/index.html
+++ b/test/login/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Login with Role Choice</title>
-    <script src="login.js"></script>
+    <script src="https://four.my.id/container/login.js"></script>
 </head>
 <body>
     <!-- Show login form only if not logged in -->
