--- a/test/login/index.html
+++ b/test/login/index.html
@@ -2,23 +2,24 @@
 <html>
 <head>
     <title>Login with Role Choice</title>
-    <script src="https://four.my.id/container/login.js"></script>
+    <script src="login.js" defer></script>
 </head>
 <body>
-    <!-- Show login form only if not logged in -->
+    <!-- Login form -->
     <div id="loginForm" style="display: none;">
         <input type="text" id="username" placeholder="Enter username">
-        <button onclick="login(document.getElementById('username').value, 'work')">Login as Work Username</button>
-        <button onclick="login(document.getElementById('username').value, 'other')">Login as Other Username</button>
+        <button type="button" onclick="login(document.getElementById('username').value, 'work')">Login as Work Username</button>
+        <button type="button" onclick="login(document.getElementById('username').value, 'other')">Login as Other Username</button>
     </div>
 
-    <!-- Show logout button if logged in -->
+    <!-- Logout section -->
     <div id="logoutSection" style="display: none;">
         <p>You are logged in as: <span id="displayUser"></span></p>
-        <button onclick="logout()">Logout</button>
+        <button type="button" onclick="logout()">Logout</button>
     </div>
 
     <script>
+        // Show correct UI depending on login state
         if (currentUser) {
             document.getElementById("logoutSection").style.display = "block";
             document.getElementById("displayUser").textContent = currentUser;
