--- a/test/login/index.html
+++ b/test/login/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <!-- Login form -->
-    <div id="loginForm" style="display: none;">
+    <div id="loginForm" style="display: block;">
         <input type="text" id="username" placeholder="Enter username">
         <button type="button" onclick="login(document.getElementById('username').value, 'work')">Login as Work Username</button>
         <button type="button" onclick="login(document.getElementById('username').value, 'other')">Login as Other Username</button>
