--- a/test/login/index.html
+++ b/test/login/index.html
@@ -14,7 +14,7 @@
 
     <!-- Logout section -->
     <div id="logoutSection" style="display: block;">
-        <p>You are logged in as: <span id="displayUser"></span></p>
+        <p>You are logged in as: <p id="displayUser">Test</p></p>
         <button type="button" onclick="logout()">Logout</button>
     </div>
 
