--- a/test/login/index.html
+++ b/test/login/index.html
@@ -5,29 +5,15 @@
     <script src="https://four.my.id/container/login.js" defer></script>
 </head>
 <body>
-    <!-- Login form -->
-    <div id="loginForm" style="display: block;">
+    <div id="loginForm">
         <input type="text" id="username" placeholder="Enter username">
-        <button type="button" onclick="login(document.getElementById('username').value, 'work')">Login as Work Username</button>
-        <button type="button" onclick="login(document.getElementById('username').value, 'other')">Login as Other Username</button>
+        <button id="loginWork" type="button">Login as Work Username</button>
+        <button id="loginOther" type="button">Login as Other Username</button>
     </div>
 
-    <!-- Logout section -->
-    <div id="logoutSection" style="display: block;">
-        <p>You are logged in as: <p id="displayUser">Test</p></p>
-        <button type="button" onclick="logout()">Logout</button>
+    <div id="logoutSection" style="display: none;">
+        <p>You are logged in as: <span id="displayUser"></span></p>
+        <button id="logoutBtn" type="button">Logout</button>
     </div>
-
-    <script>
-        // Show correct UI depending on login state
-        if (currentUser) {
-            document.getElementById("loginForm").style.display = "none";
-            document.getElementById("logoutSection").style.display = "block";
-            document.getElementById("displayUser").innerHTML = currentUser;
-        } else {
-            document.getElementById("logoutSection").style.display = "none";
-            document.getElementById("loginForm").style.display = "block";
-        }
-    </script>
 </body>
 </html>
