--- a/test/login/index.html
+++ b/test/login/index.html
@@ -7,8 +7,8 @@
 <body>
     <div id="loginForm">
         <input type="text" id="username" placeholder="Enter username">
-        <button id="loginWork" type="button">Login as Work Username</button>
-        <button id="loginOther" type="button">Login as Other Username</button>
+        <button id="loginBedrock" type="button">Bedrock</button>
+        <button id="loginJava" type="button">Java</button>
     </div>
 
     <div id="logoutSection" style="display: none;">
