--- a/store/index.html
+++ b/store/index.html
@@ -176,6 +176,11 @@
                     <li class="nav-link">
                         <a href="https://four.my.id/discord"><b>Discord</b></a>
                     </li>
+                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" id="displayUser">Profile<span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li id="logoutBtn">Logut</li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </nav>
