--- a/store/index.html
+++ b/store/index.html
@@ -1,258 +1,258 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
-    <title>Four Network ID store</title>
-    <link rel="icon" type="image/x-icon" href="icon.png">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <style>
-        body {
-            background-color: gray;
-            margin: 0;
-        }
-        .header {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0);
-            color: #ffffff;
-            z-index: 1000;
-            transition: background-color 0.3s ease-in-out;
-        }
-        b {
-            color: #ffffff;
-        }
-        .card {
-            background-color: #262423;
-            border-radius: 10px;
-            padding: 20px;
-            margin: 10px;
-            text-align: center;
-            width: 250px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            color: #ffffff;
-        }
-        .card img {
-            width: 80px; 
-            height: auto;
-        }
-        .coming-soon {
-            font-size: 24px;
-            color: black;
-            font-weight: bold;
-            width: 100%;
-            text-align: center;
-            margin-top: 20px;
-            font-family: Arial Black;
-        }
-        footer {
-            background-color: black;
-            padding: 20px;
-            text-align: left;
-            font-size: 14px;
-            color: #ffffff;
-            width: auto;
-        }
-        .footer-content {
-            display: flex;
-            justify-content: space-between;
-            flex-wrap: wrap;
-            max-width: 1200px;
-            margin: auto;
-        }
-        .footer-section {
-            flex: 1;
-            padding: 10px;
-            min-width: 200px;
-        }
-        .footer-section h4 {
-            margin-bottom: 10px;
-        }
-        .footer-section p {
-            margin: 5px 0;
-        }
-        .content {
-            background-color: gray;
-            padding: 20px;
-            text-align: center;
-        }
-        .content-1 {
-            background-color: gray;
-            padding: 20px;
-            text-align: center;
-            height: 100px;
-        }
-        .card-align {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
-        }
-        a {
-            color: #ffffff;
-            text-decoration: none;
-        }
-        .banner {
-            background-image: url('banner.jpg');
-            background-color: #000000;
-            background-size: cover;
-            background-attachment: fixed;
-            height: 370px;
-            color: white;
-            display: flex;
-            align-items: center;
-            text-align: center;
-            position: relative;
-            width: auto;
-        }
-        .header-text {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 2em;
-            color: #ffffff;
-        }
-        h2 {
-            font-size: 120%;
-        }
-        .p {
-            font-size: 80%
-        }
-        .align {
-            color: #ffffff;
-            background-color: #262423;
-            font-size: 400%;
-            height: 23px;
-        }
-        .button {
-            width: auto;
-            height: 40px;
-            background-color: #ffffff;
-            color: #000000;
-            border-color: #ff9800;
-        }
-        h4 {
-            font-size: 140%;
-        }
-        .button:hover {
-            background-color: #ff9800;
-            color: #ffffff;
-        }
-        .card:hover {
-            transform: translateY(-10px);
-            text-decoration: none;
-        }
-        .img {
-            border-radius: 1px;
-            border-color: black;
-            align-self: center;
-        }
-        .h1:hover {
-            color: white;
-        }
-    </style>
-</head>
-<body>
-    <header class="header">
-        <nav class="navbar navbar-expand-lg navbar-dark">
-            <a class="navbar-brand" href="https://four.my.id">Four Network ID</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/home"><b>Home</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/store"><b>Store</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://four.my.id/perks"><b>Perks</b></a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="https://four.my.id/discord"><b>Discord</b></a>
-                    </li>
-                    <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" id="displayUser">Profile<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li id="logoutBtn">Logut</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="banner">
-        <div class="header-text"><h1> STORE </h1></div>
-    </div>
-    <hr>
-
-    <div class="card-align">
-        <a href="rank" class="card btn">
-            <img src="2.png" alt="Common Rank" class="img">
-            <div class="align"></div>
-            <div class="align"></div>
-            <div class="align"></div>
-            <div class="align"></div>
-            <h1>Rank</h1>
-        </a>
-        <a href="fragment" class="card btn">
-            <img src="fragment.png" alt="Fragment" class="img">
-            <div class="align"></div>
-            <div class="align"></div>
-            <div class="align"></div>
-            <div class="align"></div>
-            <h1>Fragment</h1>
-        </a>
-    </div>
-    <div>
-        <img src="" alt="">
-        <h2></h2>
-        <p></p>
-        <a href=""></a>
-    </div>
-    <div class="content-1"></div>
-    <div class="content-1"></div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script>
-        let lastScrollY = window.scrollY;
-        const header = document.querySelector('.header');
-
-        window.addEventListener('scroll', () => {
-            if (window.scrollY > lastScrollY) {
-                // Scrolling down
-                header.style.backgroundColor = '#0f0e0b';
-            } else if (window.scrollY <= 0) {
-                // At the top of the page
-                header.style.backgroundColor = 'rgba(0, 0, 0, 0)';
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+        <title>Four Network ID store</title>
+        <link rel="icon" type="image/x-icon" href="icon.png">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+        <style>
+            body {
+                background-color: gray;
+                margin: 0;
             }
-            lastScrollY = window.scrollY;
-        });
-    </script>
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">    
-                <p>&copy; Four Network ID</p>
-                <p>Luckyblock Theme Server</p>
+            .header {
+                position: fixed;
+                top: 0;
+                width: 100%;
+                background-color: rgba(0, 0, 0, 0);
+                color: #ffffff;
+                z-index: 1000;
+                transition: background-color 0.3s ease-in-out;
+            }
+            b {
+                color: #ffffff;
+            }
+            .card {
+                background-color: #262423;
+                border-radius: 10px;
+                padding: 20px;
+                margin: 10px;
+                text-align: center;
+                width: 250px;
+                box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+                color: #ffffff;
+            }
+            .card img {
+                width: 80px; 
+                height: auto;
+            }
+                .coming-soon {
+                font-size: 24px;
+                color: black;
+                font-weight: bold;
+                width: 100%;
+                text-align: center;
+                margin-top: 20px;
+                font-family: Arial Black;
+            }
+            footer {
+                background-color: black;
+                padding: 20px;
+                text-align: left;
+                font-size: 14px;
+                color: #ffffff;
+                width: auto;
+            }
+            .footer-content {
+                display: flex;
+                justify-content: space-between;
+                flex-wrap: wrap;
+                max-width: 1200px;
+                margin: auto;
+            }
+            .footer-section {
+                flex: 1;
+                padding: 10px;
+                min-width: 200px;
+            }
+            .footer-section h4 {
+                margin-bottom: 10px;
+            }
+            .footer-section p {
+                margin: 5px 0;
+            }
+            .content {
+                background-color: gray;
+                padding: 20px;
+                text-align: center;
+            }
+            .content-1 {
+                background-color: gray;
+                padding: 20px;
+                text-align: center;
+                height: 100px;
+            }
+            .card-align {
+                font-family: Arial, sans-serif;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                padding: 20px;
+            }
+            a {
+                color: #ffffff;
+                text-decoration: none;
+            }
+            .banner {
+                background-image: url('banner.jpg');
+                background-color: #000000;
+                background-size: cover;
+                background-attachment: fixed;
+                height: 370px;
+                color: white;
+                display: flex;
+                align-items: center;
+                text-align: center;
+                position: relative;
+                width: auto;
+            }
+            .header-text {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 2em;
+                color: #ffffff;
+            }
+            h2 {
+                font-size: 120%;
+            }
+            .p {
+                font-size: 80%
+            }
+            .align {
+                color: #ffffff;
+                background-color: #262423;
+                font-size: 400%;
+                height: 23px;
+            }
+            .button {
+                width: auto;
+                height: 40px;
+                background-color: #ffffff;
+                color: #000000;
+                border-color: #ff9800;
+            }
+            h4 {
+                font-size: 140%;
+            }
+            .button:hover {
+                background-color: #ff9800;
+                color: #ffffff;
+            }
+            .card:hover {
+                transform: translateY(-10px);
+                text-decoration: none;
+            }
+            .img {
+                border-radius: 1px;
+                border-color: black;
+                align-self: center;
+            }
+            .h1:hover {
+                color: white;
+            }
+        </style>
+    </head>
+    <body>
+        <div>
+            <header class="header">
+                <nav class="navbar navbar-expand-lg navbar-dark">
+                    <a class="navbar-brand" href="https://four.my.id">Four Network ID</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://four.my.id/home"><b>Home</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://four.my.id/store"><b>Store</b></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="https://four.my.id/perks"><b>Perks</b></a>
+                            </li>
+                            <li class="nav-link">
+                                <a href="https://four.my.id/discord"><b>Discord</b></a>
+                            </li>
+                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" id="displayUser">Profile<span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li id="logoutBtn">Logout</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+            <div class="banner">
+                <div class="header-text"><h1> STORE </h1></div>
             </div>
-            <div class="footer-section">
-                <h4>Contact</h4>          
-                <p>Email: support@four.my.id</p>      
-                <p>Discord: antophd</p>       
-                <a href="https://four.my.id/discord" class="a"><p>Four Network discord server</p></a>
+            <hr>
+            <div class="card-align">
+                <a href="rank" class="card btn">
+                    <img src="2.png" alt="Common Rank" class="img">
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <h1>Rank</h1>
+                </a>
+                <a href="fragment" class="card btn">
+                    <img src="fragment.png" alt="Fragment" class="img">
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <div class="align"></div>
+                    <h1>Fragment</h1>
+                </a>
             </div>
-            <div class="footer-section">           
-                <h4>Follow us</h4>     
-                <p>TikTok</p>  
-                <a href="https://tiktok.com/@antop.hd" class="a"><p>@antop.hd</p></a> 
-                <a href="https://tiktok.com/@fournetworkid" class="a"><p>@fournetworkid</p></a>
+            <div>
+                <img src="" alt="">
+                <h2></h2>
+                <p></p>
+                <a href=""></a>
             </div>
+            <div class="content-1"></div>
+            <div class="content-1"></div>
+            <footer>
+                <div class="footer-content">
+                    <div class="footer-section">    
+                        <p>&copy; Four Network ID</p>
+                        <p>Luckyblock Theme Server</p>
+                    </div>
+                    <div class="footer-section">
+                        <h4>Contact</h4>          
+                        <p>Email: support@four.my.id</p>      
+                        <p>Discord: antophd</p>       
+                        <a href="https://four.my.id/discord" class="a"><p>Four Network discord server</p></a>
+                    </div>
+                    <div class="footer-section">           
+                        <h4>Follow us</h4>     
+                        <p>TikTok</p>  
+                        <a href="https://tiktok.com/@antop.hd" class="a"><p>@antop.hd</p></a> 
+                        <a href="https://tiktok.com/@fournetworkid" class="a"><p>@fournetworkid</p></a>
+                    </div>
+                </div>
+            </footer>
         </div>
-    </footer>
-</body>
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.4.4/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+        <script>
+            let lastScrollY = window.scrollY;
+            const header = document.querySelector('.header');
+            window.addEventListener('scroll', () => {
+                if (window.scrollY > lastScrollY) {
+                    // Scrolling down
+                    header.style.backgroundColor = '#0f0e0b';
+                } else if (window.scrollY <= 0) {
+                    // At the top of the page
+                    header.style.backgroundColor = 'rgba(0, 0, 0, 0)';
+                }
+                lastScrollY = window.scrollY;
+            });
+        </script>
+    </body>
 </html>
