--- a/store/index.html
+++ b/store/index.html
@@ -177,9 +177,9 @@
                             <li class="nav-link">
                                 <a href="https://four.my.id/discord"><b>Discord</b></a>
                             </li>
-                            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" id="displayUser"><b>Profile</b><span class="caret"></span></a>
+                            <li class="dropdown nav-item"><a class="dropdown-toggle" data-toggle="dropdown" id="displayUser"><b>Profile</b><span class="caret"></span></a>
                                 <ul class="dropdown-menu">
-                                    <li id="logoutBtn"><b>Logout</b></li>
+                                    <li id="logoutBtn">Logout</li>
                                 </ul>
                             </li>
                         </ul>
