--- a/store/index.html
+++ b/store/index.html
@@ -177,7 +177,10 @@
                             <li class="nav-link">
                                 <a href="https://four.my.id/discord"><b>Discord</b></a>
                             </li>
-                            <li class="dropdown nav-item"><button class="dropdown-toggle" data-toggle="dropdown" id="displayUser"><b>Profile</b></button>
+                            <li class="nav-item">
+                                <button class="dropdown-toggle" data-toggle="dropdown" id="displayUser">
+                                    <b>Profile</b>
+                                </button>
                                 <ul class="dropdown-menu">
                                     <li id="logoutBtn">Logout</li>
                                 </ul>
