--- a/store/index.html
+++ b/store/index.html
@@ -178,9 +178,9 @@
                                 <a href="https://four.my.id/discord"><b>Discord</b></a>
                             </li>
                             <li class="nav-item">
-                                <button class="dropdown-toggle" data-toggle="dropdown" id="displayUser">
+                                <a class="dropdown-toggle btn" data-toggle="dropdown" id="displayUser">
                                     <b>Profile</b>
-                                </button>
+                                </a>
                                 <ul class="dropdown-menu">
                                     <li id="logoutBtn">Logout</li>
                                 </ul>
