--- a/store/index.html
+++ b/store/index.html
@@ -178,7 +178,7 @@
                                 <a href="https://four.my.id/discord"><b>Discord</b></a>
                             </li>
                             <li class="nav-item">
-                                <a class="dropdown-toggle btn" data-toggle="dropdown" id="displayUser">
+                                <a class="dropdown-toggle" data-toggle="dropdown" id="displayUser">
                                     <b>Profile</b>
                                 </a>
                                 <ul class="dropdown-menu">
