--- a/store/index.html
+++ b/store/index.html
@@ -177,8 +177,8 @@
                             <li class="nav-link">
                                 <a href="https://four.my.id/discord"><b>Discord</b></a>
                             </li>
-                            <li class="nav-item">
-                                <a class="dropdown-toggle" data-toggle="dropdown" id="displayUser">
+                            <li class="nav-item dropdown">
+                                <a class="dropdown-toggle btn" data-toggle="dropdown" id="displayUser">
                                     <b>Profile</b>
                                 </a>
                                 <ul class="dropdown-menu">
